# News-At-Command-Line

./: config_reader.py  dev-requirements.txt  pyproject.toml  requirements.txt
