[project]
name = "news-at-command-line"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "certifi>=2025.1.31",
    "chardet>=5.2.0",
    "idna>=3.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
]
